# ka-two-b

./: baixar_legendas.py  main.py  pyproject.toml  requirements_01.txt  requirements_02.txt  test.md  test_freds0_class.py  test_transcribe_audio.py  teste.py
downloads/playlist_PLd6DVnxUXB2xbV5opTB9mXRMxROfIDQl_/: execution_report.json  youtube_videos.txt
downloads/playlist_PLd6DVnxUXB2xbV5opTB9mXRMxROfIDQl_/SbqKZdL_Mfc/: SbqKZdL_Mfc.srt
downloads/playlist_PLd6DVnxUXB2yi_HtPcjZdxA0Kna6K8-Ng/: execution_report.json  youtube_videos.txt
downloads/playlist_PLd6DVnxUXB2yi_HtPcjZdxA0Kna6K8-Ng/13V0RcKImLU/: 13V0RcKImLU.srt  13V0RcKImLU_alignment.json
downloads/playlist_PLd6DVnxUXB2yi_HtPcjZdxA0Kna6K8-Ng/13V0RcKImLU/segments/: transcricoes_freds0.json  transcricoes_lgris.json
downloads/playlist_PLd6DVnxUXB2yi_HtPcjZdxA0Kna6K8-Ng/8ZrN3JMbizI/: 8ZrN3JMbizI.srt  8ZrN3JMbizI_alignment.json
downloads/playlist_PLd6DVnxUXB2yi_HtPcjZdxA0Kna6K8-Ng/VmEu1gB3lXc/: VmEu1gB3lXc_alignmjkjkjkent.json
downloads/playlist_PLd6DVnxUXB2yi_HtPcjZdxA0Kna6K8-Ng/rI8m_dbr1gA/: rI8m_dbr1gA.srt  rI8m_dbr1gA_alignment.json
downloads/playlist_PLd6DVnxUXB2ymE0y2-jTS-zg_UNBYjt5d/: execution_report.json
downloads/playlist_PLd6DVnxUXB2zZbo0YPt9L0Ncz0FWPk958/: execution_report.json  youtube_videos.txt
downloads/video_-N5i9Fbc38I/: execution_report.json
downloads/video_DXILvIKW_FY/: execution_report.json
downloads/video_jWCSTKzq1lk/: execution_report.json  youtube_videos.txt
downloads/video_jWCSTKzq1lk/jWCSTKzq1lk/: jWCSTKzq1lk.srt
downloads/video_jWCSTKzq1lk/jWCSTKzq1lk/segments/: transcricoes_freds0.json  (+1 more)
ka_two_b.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
output/: cleanup_report.json  download_history.json  final_dataset.csv  processed_videos_history.txt  processing_log.txt
results/: TRPBY_lxJfE.json  TRPBY_lxJfE.txt  teste_01.json  teste_01.txt  teste_01_lgris-wav2vec2.txt  teste_01_whisper-base.json  teste_01_whisper-base.txt  teste_02.json  teste_02.txt  transcriptions.csv
src/: config.py
src/download/: audio_downloader.py  download_config.py  download_manager.py  subtitle_downloader.py  video_searcher.py
src/processing/: audio_segmenter.py  cleanup_manager.py  subtitle_aligner.py  test_timestamps.py  transcription_normalizer.py  transcription_validator.py  w_subtitle_aligner.py
src/transcription/: freds0_transcriber.py  freds0_wav2vec_transcriber.py  lgris_transcriber.py
(+16 files in other folders)
